Remove duplicate CSS rules and fix alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,10 +31,8 @@ html {
 p {
 	font: Georgia;
 	font-size: 2em;
-	align-items:center;
 }
 
 h1 h2 h3 {
 	font-size: 4em;
-	align-items:center;
 }
